# nvnopara

./: .gitignore  readme.md
cmake/: CMakeLists.txt
inc/: backend.hpp  device.hpp  op.hpp  opCPU.hpp  opCUDA.hpp  special.hpp  tensor.hpp
src/: backend.cpp  device.cpp  main.cpp  op.cpp  opCPU.cpp  opCUDA.cpp  opCUDA.cu  tensor.cpp
test/: correct.cpp  main.cpp  speed.cpp
